--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,18 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home")%>
+
+<!DOCTYPE html>
+<html>
+  <body>
+    
+    <div class="center jumbotron">
+        <h1>Welcome to Time trac </h1>
+
+        <h2>
+          This is an app for trac your spend of time 
+        </h2>
+
+        <%= link_to "Sign up", "signup_path", class: "btn btn-lg btn-success" %>
+    </div>
+    
+  </body>
+</html>
