Add user controller with new method, update routes to signup

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,7 @@
           This is an app for trac your spend of time 
         </h2>
 
-        <%= link_to "Sign up", "signup_path", class: "btn btn-lg btn-success" %>
+        <%= link_to "Sign up", signup_path, class: "btn btn-lg btn-success" %>
     </div>
     
   </body>
