--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,10 +17,36 @@ body {
   
   .center {
     text-align: center;
+    h1 {
+      margin-bottom: 10px;
+    }
+  }
+
+  /* typography */
+
+h1, h2, h3, h4, h5, h6 {
+    line-height: 1;
   }
   
-  .center h1 {
-    margin-bottom: 10px;
+  h1 {
+    font-size: 3em;
+    letter-spacing: -2px;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  
+  h2 {
+    font-size: 1.2em;
+    letter-spacing: -1px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-weight: normal;
+    color: $gray-light;
+  }
+  
+  p {
+    font-size: 1.1em;
+    line-height: 1.7em;
   }
   
   // header
@@ -28,16 +54,15 @@ body {
     float: left;
     margin-right: 10px;
     font-size: 1.7em;
-    color: #fff;
+    color: white;
     text-transform: uppercase;
     letter-spacing: -1px;
     padding-top: 9px;
     font-weight: bold;
-  }
-  
-  #logo:hover {
-    color: #fff;
-    text-decoration: none;
+    &:hover {
+      color: white;
+      text-decoration: none;
+    }
   }
   .navbar-inverse{
         background-color:  #3378c2;  
