--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
               <li> <%= link_to "Home", root_path %> </li> 
-              <li> <%= link_to "Log in", "#" %> </li>
+              <li> <%= link_to "Log in", login_path %> </li>
           </ul>
         </nav>
      </div>
