Add form in new.html.erm in groups

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,4 +1,4 @@
-<% if @user.errors.any? %>
+<%# <% if @user.errors.any? %> 
   <div id="error_explanation">
     <div class="alert alert-danger">
       The form contains <%= pluralize(@user.errors.count, "error") %>.
@@ -9,4 +9,4 @@
     <% end %>
     </ul>
   </div>
-<% end %>
+<%# <% end %>
