--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,9 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_with(model: @user, local: true) do |f| %>
+    <% if @user.errors.any? %>
       <%= render 'shared/error_messages' %>
+    <% end%>
 
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
