--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,8 @@
+// import 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 // universal
 
@@ -182,3 +185,12 @@ aside {
   }
 }
 
+.icon {
+  width: 50px;
+  height: 50px;
+  
+}
+
+.radio-b {
+ 
+}
