--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -4,9 +4,9 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_with(model: @group, local: true) do |f| %>
-    <% if @group.errors.any? %>
-      <%= render 'shared/error_messages' %>
-    <% end %>
+    
+      <%= render 'shared/error_messages', object: f.object %>
+   
 
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
@@ -16,8 +16,8 @@
 
         <div class="input-group mb-3">         
           
-          <span class="radio-b"><%= radio_button("group", "icon", "http://www.clker.com/cliparts/B/9/N/q/L/s/exercise-with-dumbbells-symbol-hi.png") %></span>
-          <img class="icon" src="http://www.clker.com/cliparts/B/9/N/q/L/s/exercise-with-dumbbells-symbol-hi.png" alt="icon">
+          <span class="radio-b"><%= radio_button("group", "icon", "https://image.flaticon.com/icons/png/512/264/264797.png") %></span>
+          <img class="icon" src="https://image.flaticon.com/icons/png/512/264/264797.png" alt="icon">
 
           <span class="radio-b"><%= radio_button("group", "icon", "https://cdn.onlinewebfonts.com/svg/img_538351.png") %></span>
           <img class="icon" src="https://cdn.onlinewebfonts.com/svg/img_538351.png" alt="icon">
