--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,9 +4,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_with(model: @user, local: true) do |f| %>
-    <% if @user.errors.any? %>
-      <%= render 'shared/error_messages' %>
-    <% end%>
+    <%= render 'shared/error_messages', object: f.object %>
 
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
