--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -14,19 +14,22 @@
 
       <%= f.label :icon, class:"text-dark pl-3" %>
 
-        <div class="input-group mb-3">         
+        <div class="input-group mb-3 ">         
           
           <span class="radio-b"><%= radio_button("group", "icon", "https://image.flaticon.com/icons/png/512/264/264797.png") %></span>
           <img class="icon" src="https://image.flaticon.com/icons/png/512/264/264797.png" alt="icon">
 
           <span class="radio-b"><%= radio_button("group", "icon", "https://cdn.onlinewebfonts.com/svg/img_538351.png") %></span>
-          <img class="icon" src="https://cdn.onlinewebfonts.com/svg/img_538351.png" alt="icon">
+          <img class="icon " src="https://cdn.onlinewebfonts.com/svg/img_538351.png" alt="icon">
 
           <span class="radio-b"><%= radio_button("group", "icon", "https://cdn.onlinewebfonts.com/svg/img_15585.png") %></span>
           <img class="icon" src="https://cdn.onlinewebfonts.com/svg/img_15585.png" alt="icon">
 
           <span class="radio-b"><%= radio_button("group", "icon", "https://cdn.onlinewebfonts.com/svg/img_74305.png") %></span>
           <img class="icon" src="https://cdn.onlinewebfonts.com/svg/img_74305.png" alt="icon">
+
+          <span class="radio-b"><%= radio_button("group", "icon", "https://cdn.onlinewebfonts.com/svg/img_528453.png") %></span>
+          <img class="icon" src="https://cdn.onlinewebfonts.com/svg/img_528453.png" alt="icon">
          
         </div>  
         <br/>                                        
