--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,11 @@
       <h1>
         <%= gravatar_for @user %>
         <%= @user.name %>
+        
       </h1>
     </section>
   </aside>
+</div>
+<div>
+  <%= link_to "Groups", groups_path %>
 </div>
