--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,10 @@
         <ul class="nav navbar-nav navbar-right collapse navbar-collapse"
             id="bs-example-navbar-collapse-1">
         <li><%= link_to "Home", root_path %></li>
+        
         <% if logged_in? %>
           <li><%= link_to "Users", users_path %></li>
+          <li><%= link_to "Groups", groups_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
