--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -8,6 +8,7 @@
 
 body {
     padding-top: 60px;
+    background-color: #f5f5f5;
   }
   
   section {
@@ -186,9 +187,19 @@ aside {
 }
 
 .icon {
-  width: 50px;
-  height: 50px;
+  width: 65px;
+  height: 65px;
   
 }
 
 // activities
+
+// bootstrap
+.card {
+  margin: 0 auto; /* Added */
+  float: none; /* Added */
+  margin-bottom: 10px; /* Added */
+  background-color: white;
+  padding: 1%;
+  
+}
