--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,23 +2,22 @@
 
 <h1> Total  of groups: <%= @groups.count %> </h1>
 
-<ul class="groups">
-    <% @groups.each do |group|%>
-    <li>
-        <span class="content"> 
 
-             <img src="<%= group.icon%>" class=" icon" alt="icon" >        
-            <%= link_to "#{group.name}", group %></td>
-        <span>
 
-         <span class="timestamp">
-            Created <%= time_ago_in_words(group.created_at) %> ago.            
-
-                <%= link_to "delete", group, method: :delete, 
-                                            data: { confirm: "Are you sure?"} %>         
-        
-        </span>
-    <% end %>
-    </li>
-    <li><%= link_to " New Group", "groups/new" %></li>
-</ul>
+<% @groups.each do |group|%>
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+        <img src="<%= group.icon%>" class=" icon" alt="icon" >
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title"> <%= link_to "#{group.name}", group %></h5>
+        <p class="card-text"><%= link_to "delete", group, method: :delete, data: { confirm: "Are you sure?"} %> </p>
+        <p class="card-text"><small class="text-muted"> Created <%= time_ago_in_words(group.created_at) %> ago.</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+ <% end %>
+   <li><%= link_to " New Group", "groups/new" %></li>
