Add some links for navigations and some style

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -10,6 +10,7 @@
         <%= link_to "delete", @group, method: :delete, 
                                       data: { confirm: "Are you sure?"} %>        
       </span>
+      <%= link_to " New Group", "new" %>
     </section>
  </aside>   
       
