--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,8 +13,7 @@
     <div class="col-md-8">
       <div class="card-body">
        
-        <p class="card-text"><%= link_to user.name, user %>
-    </li></p>
+        <p class="card-text"><%= link_to user.name, user %></p>
     
       </div>
     </div>
