--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,7 +5,7 @@
 
 
 <% @groups.each do |group|%>
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card border-primary mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
         <img src="<%= group.icon%>" class=" icon" alt="icon" >
@@ -20,4 +20,4 @@
   </div>
 </div>
  <% end %>
-   <li><%= link_to " New Group", "groups/new" %></li>
+   <%= link_to " New Group", "groups/new" %>
