--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,8 @@
         <% if logged_in? %>
           <li><%= link_to "Users", users_path %></li>
           <li><%= link_to "Groups", groups_path %></li>
+          <li><%= link_to "New Activity", "activities/new" %></li>
+
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
