--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,19 @@
 <% provide(:title, @user.name) %>
 
 
-<div class="card" style="max-width: 540px;">
+<div class="card user-show" style="max-width: 540px;">
   <div class="row g-0">
-    <div class="col-md-4">
+    <div class="col-md-4 ">
       <%= gravatar_for @user %>
     </div>
     <div class="col-md-8">
       <div class="card-body">
        
-        <p class="card-text"><%= @user.name %></p>
-        <p class="card-text"><%= link_to "Groups", groups_path %></p>
+        <h3 class="card-text "><%= @user.name %></h3>
+        <p class="card-text"><%= link_to "Settings", edit_user_path %></p>
+        <p class="card-text"><%= link_to "Activities", activitiesg_path %></p>
+        <p class="card-text"><%= link_to "External activities", external_path %></p>        
+        <p class="card-text"><%= link_to "Groups", groups_path %></p>       
       </div>
     </div>
   </div>
