--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -40,14 +40,14 @@ h1, h2, h3, h4, h5, h6 {
   }
   
   h1 {
-    font-size: 3em;
+    font-size: 2.5em;
     letter-spacing: -2px;
     margin-bottom: 30px;
     text-align: center;
   }
   
   h2 {
-    font-size: 1.2em;
+    font-size: 1.8em;
     letter-spacing: -1px;
     margin-bottom: 30px;
     text-align: center;
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6 {
   
   p {
     font-size: 1.1em;
-    line-height: 1.7em;
+    // line-height: 2em;
   }
   
   // header
@@ -84,6 +84,10 @@ h1, h2, h3, h4, h5, h6 {
 aside {
   section.user_info {
     margin-top: 20px;
+    textarea {
+      height: 100px;
+      margin-bottom: 5px;
+    }
   }
   section {
     padding: 10px 0;
@@ -179,12 +183,7 @@ input {
  
 }
 
-aside {
-  textarea {
-    height: 100px;
-    margin-bottom: 5px;
-  }
-}
+
 
 .icon {
   width: 65px;
@@ -194,15 +193,18 @@ aside {
 
 
 
-// activities
+
 
 // bootstrap
 .card {
-  margin: 0 auto; /* Added */
-  float: none; /* Added */
-  margin-bottom: 10px; /* Added */
+  margin: 0 auto; 
+  float: none; 
+  margin-bottom: 10px; 
   background-color: white;
   padding: 3%;
+  p {
+     padding: 4%;
+  }
   
 }
 
@@ -220,4 +222,13 @@ aside {
     padding-bottom: 1%;
   }
 }
+ .jumbotron {
+   margin-top: 5%;
+   background-color: #3378c2;
+   h1, h4, a {
+     color: $gray-lighter;
+     padding-bottom: 1%;
+   }
+
+ }
 
