--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,23 +1,40 @@
 <% provide(:title, "Groups") %>
 
-<h1> Total  of groups: <%= @groups.count %> </h1>
 
+<div class="card" style="max-width: 540px;">
+	<div class="row g-0"> 
+		<div >
+			<h1 class="card-text"> Total groups: <%= @groups.count %> </h1>
+       <h2> <%= link_to " New Group", "groups/new" %> </h2>
+		</div>
 
-
-<% @groups.each do |group|%>
-<div class="card border-primary mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-        <img src="<%= group.icon%>" class=" icon" alt="icon" >
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title"> <%= link_to "#{group.name}", group %></h5>
-        <p class="card-text"><%= link_to "delete", group, method: :delete, data: { confirm: "Are you sure?"} %> </p>
-        <p class="card-text"><small class="text-muted"> Created <%= time_ago_in_words(group.created_at) %> ago.</small></p>
-      </div>
-    </div>
-  </div>
+	</div>
 </div>
- <% end %>
-   <%= link_to " New Group", "groups/new" %>
+
+
+
+
+ 
+<% @groups.each do |group|%>
+ <div class="card" style="max-width: 540px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                 <img src="<%= group.icon%>" class=" icon" alt="icon" >
+             </div>
+             <div class="col-md-4">
+                    <div class="card-body">
+                        <p class="card-title"> <%= link_to "#{group.name}", group %></p>
+                        
+                        <small class="card-text"> Created at: <%= group.created_at.strftime("%d-%b-%Y") %></small>
+                        
+                    </div>
+             </div>
+             <div class="col-md-4">
+                    <div class="card-body">
+                      <p class="card-text"><%= link_to "delete", group, method: :delete, data: { confirm: "Are you sure?"} %> </p>
+                        
+                    </div>
+            </div>
+    </div>
+ </div>
+  <% end %>
