--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -16,8 +16,8 @@
 
         <div class="input-group mb-3 ">         
           
-          <span class="radio-b"><%= radio_button("group", "icon", "https://image.flaticon.com/icons/png/512/264/264797.png") %></span>
-          <img class="icon" src="https://image.flaticon.com/icons/png/512/264/264797.png" alt="icon">
+          <span class="radio-b"><%= radio_button("group", "icon", "https://www.freeiconspng.com/uploads/displaying-19-images-for--workout-icon-png-0.png") %></span>
+          <img class="icon" src="https://www.freeiconspng.com/uploads/displaying-19-images-for--workout-icon-png-0.png" alt="icon">
 
           <span class="radio-b"><%= radio_button("group", "icon", "https://cdn.onlinewebfonts.com/svg/img_538351.png") %></span>
           <img class="icon " src="https://cdn.onlinewebfonts.com/svg/img_538351.png" alt="icon">
