--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,17 @@
         <% if logged_in? %>
           <li><%= link_to "Users", users_path %></li>
           <li><%= link_to "Groups", groups_path %></li>
-          <li><%= link_to "New Activity", "activities/new" %></li>
+
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              All Activities <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+          <li><%= link_to "External A", external_path %></li>
+          <li><%= link_to "Activities", activitiesg_path %></li>
+            </ul>
+          </li>          
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
