--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -3,26 +3,6 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @activity, local: true) do |f| %>
-    <%= render 'shared/error_messages', object: f.object %>
-
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
-
-      <%= f.label :activity_time %>
-      <%= f.number_field :activity_time, class: 'form-control' %>
-
-        <div class="form-group">
-            <%= f.label 'Group' %>
-            <select id="expense_group_id" name="activity[group_id]" class="custom-select" id="inputGroupSelect01">
-            <option value='<%= nil%>'>None</option>
-            <% Group.all.each do |group| %>
-                <option value="<%= group.id %>"><%= group.name %></option>
-            <% end %>
-            </select>
-        </div>
-
-      <%= f.submit "Create my Activity", class: "btn btn-primary" %>
-    <% end %>
+    <%= render "form" %>
   </div>
 </div>
