--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,70 +8,13 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="//db.onlinewebfonts.com/c/72b6f2c9990bd3d37b8013a59ed78902?family=Proxima+Nova" rel="stylesheet" type="text/css"/> 
   </head>
 
-  <body>
-  <header class="navbar navbar-fixed-top navbar-inverse">
-     <div class="container">
-        <%= link_to "Time-trac", root_path, id: "logo" %>
-   <nav>
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed"
-                data-toggle="collapse"
-                data-target="#bs-example-navbar-collapse-1"
-                aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-        <ul class="nav navbar-nav navbar-right collapse navbar-collapse"
-            id="bs-example-navbar-collapse-1">
-        <li><%= link_to "Home", root_path %></li>
-          
-          <% if logged_in? %>
-          <li><%= link_to "Users", users_path %></li>
-          <li><%= link_to "Groups", groups_path %></li>
-
-
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              All Activities <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-          <li><%= link_to "External A", external_path %></li>
-          <li><%= link_to "Activities", activitiesg_path %></li>
-            </ul>
-          </li>          
-
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li> <%= link_to "Settings", edit_user_path(current_user) %> </li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "Log out", logout_path, method: :delete %>
-              </li>
-            </ul>
-          </li>
-        <% else %>
-          <li><%= link_to "Log in", login_path %></li>
-        <% end %>
-      </ul>
-    </nav>
-     </div>
-  </header>
-
-
-
+  <body> 
+     <%= render "layouts/header" %>
     <div class="container">
-      <% flash.each do |message_type, message| %>
-        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
-      <% end %>
+      <%= render "layouts/flash_messages"%>
       <%= yield %>
 
     </div>
