--- a/app/views/users/external_activities.html.erb
+++ b/app/views/users/external_activities.html.erb
@@ -1,40 +1,24 @@
 <% provide(:title, "External Activities") %>
 <div class="card" style="max-width: 540px;">
-	<div class="row g-0">
-		<div class="col-md-4">
-			<h2 class="card-text"> TOTAL: </h2>
-		</div>
-		<div class="col-md-4">
-			<h2 class="card-text"><%= @external_total %><%= "hour".pluralize(@external_total) %>.</h2>
+    <div class="row g-0">	
+        <div class="col-md-6">
+            <h2 class="card-text"> TOTAL: 
+            </h2>
         </div>
-        <div class="col-md-4"> 
-             <h2 class="card-text activity"> <%= link_to " New Activity", "activities/new" %> </h2> 
+        <div class="col-md-6">
+            <h2 class="card-text">
+                <%= @external_total %> <%= "hour".pluralize(@external_total) %>.
+            </h2>
         </div>
-	
-		</div>
-	</div>
+   </div>
 </div>
-<% @external_activities.each do |activity| %>
-    <div class="card" style="max-width: 540px;">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="https://cdn.onlinewebfonts.com/svg/img_132703.png" class=" icon" alt="icon" >
-            </div>
-                <div class="col-md-4">
-                    <div class="card-body">
-                        <p class="card-text"><%= activity.name %>
-                        </p>
-                        <small class="card-text"> Created at: <%= activity.created_at.strftime("%d-%b-%Y") %></small>
-                        <%= link_to "delete", activity, method: :delete, data: { confirm: "Are you sure?"} %>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card-body">
-                        <p class="card-text"><%= activity.activity_time %><%= "Hour".pluralize(activity.activity_time) %>. </p>
-                            
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
-    <% end %>
+    <%= render "list_external"%>
+<div class="card" style="max-width: 540px;">
+    <div class="row g-0">
+        <div class= "center"> 
+            <h2 class= "btn btn-success"> 
+              <%= link_to " New Activity", "activities/new" %> 
+            </h2> 
+         </div>
+    </div>
+</div>
