--- a/app/views/users/_list_users.html.erb
+++ b/app/views/users/_list_users.html.erb
@@ -8,7 +8,7 @@
     <div class="col-md-8">
       <div class="card-body">
        
-        <p class="card-text"><%= link_to user.name, user %></p>
+        <p class="card-text"><%=  user.name %></p>
     
       </div>
     </div>
