--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,7 @@
             <ul class="dropdown-menu">
           <li><%= link_to "External A", external_path %></li>
           <li><%= link_to "Activities", activitiesg_path %></li>
+          <li><%= link_to "Total", activities_path %></li>
             </ul>
           </li>          
 
