--- a/app/views/groups/_list.html.erb
+++ b/app/views/groups/_list.html.erb
@@ -5,7 +5,7 @@
          
           <% @group.activities.each do |activity| %>
           <li>        
-            <p class="name"><%= activity.name %> </p>
+            <p class="name"><%= link_to  "#{activity.name}", activity %> </p>
             <p class="user"> Author: <%= link_to activity.user.name, activity.user %> </p>
             <p class="timestamp">
                 Created at: <%= activity.created_at.strftime("%d-%b-%Y") %> 
