Fix bug in in activities/index

--- a/app/views/users/group_activities.html.erb
+++ b/app/views/users/group_activities.html.erb
@@ -5,7 +5,7 @@
 			<h2 class="card-text"> TOTAL: </h2>            
 		</div>
 		<div class="col-md-6">
-			<h2 class="card-text"><%= @group_activities_total %><%= "hour".pluralize(@group_activities_total) %>. </h2>            
+			<h2 class="card-text"><%= @activities_total%><%= "hour".pluralize(@activities_total) %>. </h2>            
 		</div>
 	</div>
 </div>
